--- a/gallery.css
+++ b/gallery.css
@@ -1,6 +1,7 @@
 /* Full screen background */
 .gallery-screen {
     position: relative;
+    z-index: 5; /* ⬅️ Add this line */
     width: 100%;
     height: 100%;
     background: url('UX/quickSettingsBlack.png') no-repeat center/cover;
